# libmali

./: CMakeLists.txt  LICENSE.TXT  ld.so.conf.cmake
debian/: README.Debian  README.source  changelog  control  copyright  libmali-sunxi-utgard0-r6p0.install  libmali-sunxi-utgard0-r6p0.links  shlibs.local.ex
